Fix annotation processing issue on jdk > 22 (#3882)
Starting from JDK 22, a new option was added w.r.t. annotation
processing. See more: https://inside.java/2024/06/18/quality-heads-up/

Therefore in some JDK such as 23, user cannot build Hazelcast, because
some SQL classes (autogenerated by annotation processors) won't be
generated. To fix this, we must add `-proc:full`. We need a separate
profile in order to dynamically set the property depending on JVM used.

---------

Co-authored-by: Jack Green <JackPGreen@Gmail.com>
GitOrigin-RevId: a199aed6f303c22601d227ef6b4f881547ca0b6f